--- a/server/todo.txt
+++ b/server/todo.txt
@@ -111,6 +111,42 @@ New TODO:
     sorsolas, add reverse order score also
 
     check whether harmonic mean is the same how football ranking works
+37) multicast message
+        /*
+     * if (event.getRef() != null) {
+     * promotionRepository.findPromotionByEvent(event.getRef().getId()).ifPresent(
+     * promotion -> {
+     * promotion.setCnt(promotion.getEvents().stream().mapToInt(Event::getCnt).sum()
+     * );
+     * promotionRepository.save(promotion);
+     * });
+     * 
+     * if (action != null) {
+     * List<String> deviceKeys = eventRepository.findTokensByEvent(
+     * new UUID[] { event.getRef().getId() }).stream()
+     * .map(Token::getDeviceKey).collect(Collectors.toList());
+     * 
+     * if (!deviceKeys.isEmpty()) {
+     * MulticastMessage message = MulticastMessage.builder()
+     * .setNotification(Notification.builder()
+     * .setTitle("Event + " + action)
+     * .setBody("Promoter " + action +
+     * " the " + event.getName() + " event!")
+     * .build())
+     * .addAllTokens(deviceKeys)
+     * .build();
+     * 
+     * try {
+     * FirebaseMessaging.getInstance().sendMulticast(message);
+     * } catch (FirebaseMessagingException e) {
+     * e.printStackTrace();
+     * }
+     * System.out.println("Successfully sent message");
+     * }
+     * }
+     * }
+     * 
+     */
 
 
 
