--- a/server/todo.txt
+++ b/server/todo.txt
@@ -200,3 +200,4 @@ New TODO:
     (discreet level is member does not see invisible/visible/invisible_school/visible_school)
     in dating group the group is visible, but in business school will be shown
     invisible does mean, can't even rate or see new members, just wait for the admin to be invited
+44) school/car refactor (car join first optional event - check whether it's working)
